; ModuleID = '/home/carl/AnghaBench/linux/net/llc/extr_llc_sap.c_llc_do_mcast.c'
source_filename = "/home/carl/AnghaBench/linux/net/llc/extr_llc_sap.c_llc_do_mcast.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.llc_sap = type { i32 }
%struct.sk_buff = type { i32 }
%struct.sock = type { i32 }

@GFP_ATOMIC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.llc_sap*, %struct.sk_buff*, %struct.sock**, i32)* @llc_do_mcast to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @llc_do_mcast(%struct.llc_sap* %0, %struct.sk_buff* %1, %struct.sock** %2, i32 %3) #0 {
  %5 = alloca %struct.llc_sap*, align 8
  %6 = alloca %struct.sk_buff*, align 8
  %7 = alloca %struct.sock**, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.sk_buff*, align 8
  %10 = alloca i32, align 4
  store %struct.llc_sap* %0, %struct.llc_sap** %5, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %6, align 8
  store %struct.sock** %2, %struct.sock*** %7, align 8
  store i32 %3, i32* %8, align 4
  store i32 0, i32* %10, align 4
  br label %11

11:                                               ; preds = %43, %4
  %12 = load i32, i32* %10, align 4
  %13 = load i32, i32* %8, align 4
  %14 = icmp slt i32 %12, %13
  br i1 %14, label %15, label %46

15:                                               ; preds = %11
  %16 = load %struct.sk_buff*, %struct.sk_buff** %6, align 8
  %17 = load i32, i32* @GFP_ATOMIC, align 4
  %18 = call %struct.sk_buff* @skb_clone(%struct.sk_buff* %16, i32 %17)
  store %struct.sk_buff* %18, %struct.sk_buff** %9, align 8
  %19 = load %struct.sk_buff*, %struct.sk_buff** %9, align 8
  %20 = icmp ne %struct.sk_buff* %19, null
  br i1 %20, label %28, label %21

21:                                               ; preds = %15
  %22 = load %struct.sock**, %struct.sock*** %7, align 8
  %23 = load i32, i32* %10, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds %struct.sock*, %struct.sock** %22, i64 %24
  %26 = load %struct.sock*, %struct.sock** %25, align 8
  %27 = call i32 @sock_put(%struct.sock* %26)
  br label %43

28:                                               ; preds = %15
  %29 = load %struct.llc_sap*, %struct.llc_sap** %5, align 8
  %30 = load %struct.sk_buff*, %struct.sk_buff** %9, align 8
  %31 = load %struct.sock**, %struct.sock*** %7, align 8
  %32 = load i32, i32* %10, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds %struct.sock*, %struct.sock** %31, i64 %33
  %35 = load %struct.sock*, %struct.sock** %34, align 8
  %36 = call i32 @llc_sap_rcv(%struct.llc_sap* %29, %struct.sk_buff* %30, %struct.sock* %35)
  %37 = load %struct.sock**, %struct.sock*** %7, align 8
  %38 = load i32, i32* %10, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds %struct.sock*, %struct.sock** %37, i64 %39
  %41 = load %struct.sock*, %struct.sock** %40, align 8
  %42 = call i32 @sock_put(%struct.sock* %41)
  br label %43

43:                                               ; preds = %28, %21
  %44 = load i32, i32* %10, align 4
  %45 = add nsw i32 %44, 1
  store i32 %45, i32* %10, align 4
  br label %11

46:                                               ; preds = %11
  ret void
}

declare dso_local %struct.sk_buff* @skb_clone(%struct.sk_buff*, i32) #1

declare dso_local i32 @sock_put(%struct.sock*) #1

declare dso_local i32 @llc_sap_rcv(%struct.llc_sap*, %struct.sk_buff*, %struct.sock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
